--- a/Backened/.env
+++ b/Backened/.env
@@ -1,2 +1,2 @@
  PORT = 4000
-MONGODB_URI="mongodb://127.0.0.1:27017/BookStore"
+MONGODB_URI="mongodb+srv://sd83580:p8wlZlHe3H5yFHez@cluster0.3mxvh4k.mongodb.net/BookStore?retryWrites=true&w=majority&appName=Cluster0"
